kube-ops-view/bases/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-ops-view
spec:
  rules:
  - host: kube-ops-view.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-ops-view
          servicePort: 80
